# mqc3

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yaml
docs/: README.md
docs/source/: build.sh  circuit_repr.ipynb  circuit_repr.md  conf.py  derivation.md  feedforward.ipynb  feedforward.md  gates.md  graph_repr.ipynb  graph_repr.md  index.md  installation.md  machinery_repr.ipynb  machinery_repr.md  myst.yml  quickstart.ipynb  quickstart.md  references.bib  simulation.ipynb  simulation.md  theory.md  viz_circuit_repr.ipynb  viz_circuit_repr.md  viz_graph_repr.ipynb  viz_graph_repr.md  viz_machinery_repr.ipynb  viz_machinery_repr.md
src/mqc3/circuit/: visualize.py  visualize_state.py
src/mqc3/client/: __init__.py  _torch_simulator.py  simulator_client.py
src/mqc3/execute/: _execute.py
src/mqc3/graph/: stats.py  visualize.py
src/mqc3/graph/embed/: _search_state.py  _utility.py  beamsearch.py  dep_dag.py  greedy.py
src/mqc3/templates/: __init__.py  bs_net.py  qaoa.py
tests/e2e/: common.py  test_sim_execute_circuit.py  test_sim_execute_circuit_local.py  test_sim_execute_circuit_torch.py
tests/graph/: test_stats.py
tests/templates/: test_qaoa.py
